# Agentic-AI-ChatBot-for-USMLE-Step1

./: .dockerignore  .env  .gitattributes  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
logs/: log_2025-07-12
notebook/: agentic_rag.ipynb  evaluating_agentic_rag2.ipynb  pinecone-new-test-upload.ipynb
src/: Agentic_RAG.py  Agentic_RAG_Evaluation.py  logger.py  older_app.py
style/: chatbot_style.py
utils/: common_functions.py
